--- a/.github/workflows/通用设备编译固件.yml
+++ b/.github/workflows/通用设备编译固件.yml
@@ -187,7 +187,7 @@ jobs:
         with:
           retain_days: 1
           keep_minimum_runs: 3
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.REPO_TOKEN }}
           body: |
 
             ### OpenWrt Image information
