--- a/.github/workflows/电视盒子编译+IMG打包.yml
+++ b/.github/workflows/电视盒子编译+IMG打包.yml
@@ -289,7 +289,7 @@ jobs:
         run: |
           cd openwrt/
           echo -e "$(nproc) thread compile"
-          make -j$(($(nproc) + 1)) V=s || make -j1 || make -j1 V=s
+          make -j$(($(nproc) + 1)) V=0 || make -j1 || make -j1 V=0
           echo "status=success" >> ${GITHUB_OUTPUT}
 
       - name: Clear server space
