--- a/config/immortalwrt-master/config
+++ b/config/immortalwrt-master/config
@@ -5409,7 +5409,7 @@ CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
-is not setCONFIG_PACKAGE_luci-i18n-amlogic-zh-cn is not set
+# CONFIG_PACKAGE_luci-i18n-amlogic-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-base-ar is not set
 # CONFIG_PACKAGE_luci-i18n-base-bg is not set
 # CONFIG_PACKAGE_luci-i18n-base-bn is not set
